edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "wayplatform/connect/tachograph/dd/v1/rsa_certificate.proto";

// Data from EF Card_Certificate (File ID 'C100h').
//
// This certificate is used for card authentication in Generation 1 tachograph
// cards. It uses RSA-based cryptography and is 194 bytes in length.
//
// See Data Dictionary, Section 2.12 (CardCertificate).
// See File Structure, Section 4.2.1 (TCS_148, TCS_150).
//
// ASN.1 Definition (Gen1):
//
//     Certificate ::= OCTET STRING (SIZE(194))
//
// Note: This EF is not signed (see Section 3.3, DDP_037).
message CardCertificate {
  // RSA certificate containing the card's public key for authentication.
  dd.v1.RsaCertificate rsa_certificate = 1;
}
